# RaCo

./: .gitignore  MANIFEST.in  README.md  demo.ipynb  hubconf.py  matching_demo.ipynb  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ruff.yml
raco/: __init__.py  raco.pth  raco.py  raco_fixed_covs.pth  raco_model.py  utils.py  viz2d.py
