[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raco"
dynamic = ["version"]
description = "RaCo - A computer vision keypoint extraction library with uncertainty estimation"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "CVG", email = "info@cvg.ethz.ch"},
]
maintainers = [
    {name = "CVG", email = "info@cvg.ethz.ch"},
]
keywords = ["computer vision", "keypoints", "feature extraction", "deep learning", "uncertainty estimation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.1",
    "torchvision>=0.3",
    "numpy",
    "opencv-python",
    "matplotlib",
    "kornia>=0.6.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
notebooks = [
    "jupyter",
    "ipykernel",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/cvg/RaCo"
Repository = "https://github.com/cvg/RaCo"
Issues = "https://github.com/cvg/RaCo/issues"
Documentation = "https://github.com/cvg/RaCo#readme"
Changelog = "https://github.com/cvg/RaCo/releases"

[tool.setuptools]
packages = ["raco"]
package-data = {"raco" = ["*.pth"]}

[tool.setuptools.dynamic]
version = {attr = "raco.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true